# FORTIS

./: .gitignore  BRANCH_SUMMARY.md  FORTIS_2.0_EXECUTIVE_SUMMARY.md  FORTIS_2.0_TECHNICAL_ARCHITECTURE.md  FORTIS_3.0_ANALYSIS_REPORT.md  FORTIS_3.0_ARCHITECTURE.md  FORTIS_3.0_BIG_PICTURE.md  FORTIS_3.0_DEVELOPMENT_COMPLETE.md  FORTIS_3.0_FINAL_SUMMARY.md  FORTIS_3.0_NO_BLOCKCHAIN.md  FORTIS_3.0_REFACTORING_COMPLETE.md  FORTIS_BIG_PICTURE.md  FORTIS_CONCEITUAL_OVERVIEW.md  FORTIS_EVOLUTION_PLAN.md  LICENSE  MIGRATION_2.0_TO_3.0.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  fortis-3.0-tests.yml
ai/config/: ollama_config.yaml
ai/docs/: ai_architecture.md  llm_integration.md
ai/notebooks/: voter_analysis.ipynb
ai/scripts/: install_ollama.ps1  install_ollama.sh
ai/tests/: test_ai_models.py  test_llm_integration.py
analytics/dashboards/: election_dashboard.py
analytics/data/: geographic_data.json  sample_elections.json  votes_timeline.csv
analytics/models/: participation_model.py  security_analysis.py
analytics/reports/: election_summary_template.md  security_audit_template.json
artigo/: FORTIS_3.0_Arquitetura_Computacao_Transparente.md  FORTIS_3.0_Transparent_Computing_Architecture.md  INSTRUCTIONS.md  README.md  VALIDATION.md  arxiv_submission.md  citations.bib  executive_summary.md  metadata.json
backend/: Cargo.toml  Dockerfile  README.md  env.example  fix_queries.py
backend/docs/: API_REFERENCE.md  ARCHITECTURE.md
backend/scripts/: build.sh  deploy.sh
backend/src/: api_docs.rs  auth.rs  blockchain.rs  config.rs  crypto.rs  database.rs  main.rs  models.rs  utils.rs
backend/src/api/: mod.rs
backend/src/api/v1/: audit.rs  auth.rs  elections.rs  mod.rs  nodes.rs  tse.rs  urnas.rs  votes.rs  zkp.rs
backend/src/audit/: mod.rs  transparent_logs.rs
backend/src/auth/: biometric.rs  certificate.rs  jwt.rs
backend/src/consensus/: api.rs  consensus_service.rs  mod.rs  node_manager.rs  tests.rs  threshold_signatures.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  security.rs  tse_auth.rs
backend/src/monitoring/: metrics.rs  mod.rs
backend/src/services/: auth.rs  blockchain.rs  crypto.rs  election.rs  mod.rs  urna_blockchain.rs  urna_security.rs  urna_service.rs  urna_sync.rs  vote.rs
backend/src/services/audit/: audit_trail.rs  blockchain_audit.rs  event_logger.rs  mod.rs  reporting.rs  verification.rs
backend/src/services/tse/: digital_certificate.rs  election_sync.rs  gov_br.rs  mod.rs  voter_validation.rs
backend/src/services/urna/: auth.rs  blockchain.rs  mod.rs  monitoring.rs  security.rs  service.rs  sync.rs
backend/src/storage/: distributed_storage.rs  mod.rs  tests.rs
backend/src/transparency/: api.rs  election_logs.rs  mod.rs  tests.rs
backend/src/utils/: validation.rs
backend/src/validation/: mod.rs  tests.rs  vote_validator.rs
backend/src/zkp/: circuits.rs  commitment.rs  mod.rs  nullifier.rs  prover.rs  verifier.rs
backend/tests/: integration_tests.rs  security_tests.rs
backend/tests/e2e/: election_flow_test.rs
backend/tests/integration/: election_test.rs  vote_test.rs
backend/tests/unit/: auth_test.rs  crypto_test.rs
blockchain/: ANALISE_COMPLETUDE_BLOCKCHAIN.md  BLOCKCHAIN_100_PERCENT_COMPLETE.md  README.md  README_OBSOLETE.md  env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
ci/docker/: nginx.conf  (+3 more)
documentacao/: ANALISE_INICIAL_FORTIS.md  ESTRUTURA_PROJETO.md  FORTIS_ESPECIFICACAO_TECNICA.md  INDEX.md  README.md  tse_presentation_plan.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile/: ANALISE_MOBILE_BIG_PICTURE.md  README.md  babel.config.js  index.js  metro.config.js  package.json  tsconfig.json
scripts/: deploy-production.sh  monitor-production.sh  run_tests.ps1  run_tests.sh
tse-integration/: README.md
urnas/: README.md
urnas/software/voting_app/: Cargo.toml
urnas/software/voting_app/src/: audit.rs  auth.rs  crypto.rs  hardware.rs  main.rs  sync.rs  ui.rs
(+147 files in other folders)
