[package]
name = "fortis-voting-app"
version = "1.0.0"
edition = "2021"
authors = ["FORTIS Team <team@fortis.gov.br>"]
description = "Aplicação de votação para urnas eletrônicas FORTIS"
license = "MIT"
repository = "https://github.com/fortis/voting-app"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Cryptography
aes-gcm = "0.10"
rsa = "0.8"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"

# Network
reqwest = { version = "0.11", features = ["json"] }
url = "2.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Configuration
config = "0.13"
toml = "0.8"

# Hardware interfaces
libusb = "0.3"
hidapi = "2.0"

# Image processing (for biometric data)
image = "0.24"

# QR Code generation
qrcode = "0.14"

# Audio processing
cpal = "0.15"

# System monitoring
sysinfo = "0.29"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.11"

# Test data generation
fake = "2.8"

[profile.release]
# Optimize for size and performance
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true

[[bin]]
name = "fortis-voting-app"
path = "src/main.rs"

[features]
default = ["hardware", "network", "crypto"]
hardware = []
network = []
crypto = []
audit = []
accessibility = []
